# tdx-stocks

./: .gitignore  README.md  holdings.csv.example  pyproject.toml  report_v7_to_v8_command_reports_clean_paths.patch  requirements.lock.txt
.github/workflows/: ci.yml
config/: tdx_stocks.example.toml
docs/: advanced_cli.md  backlog.md  cli_help_summary.md  cli_manual.md  cli_migration_0_7.md  daily.md  development.md  experiments.md  factors.md  portfolio.md  portfolio_backtest.md  rebalance.md  risk.md  run_config.md  strategies.md  strategy.md  strategy_examples.md  strategy_explain.md  strategy_presets.md  tdx_stocks_cli_usage.excalidraw  tdx_stocks_cli_usage.html  tdx_stocks_latest_architecture.html
docs/archive/: tdx_stocks_latest_architecture.html
experiments/: alerts.toml  backtest.toml  daily.toml  event_calendar.toml  grid_search.toml  grid_search.toml.bak.v14.20260521152055  grid_search.toml.bak.v14.20260521152113  logging.toml  macro_filter.toml  order_execution.toml  portfolio.toml  rebalance.toml  risk_management.toml  risk_scenario.toml  screening_pre_filter.toml  signal.toml  stop_loss_dynamic.toml
experiments/advanced/: grid_search.toml  signal.toml
scripts/: coverage_cli.sh
src/tdx_stocks/: __init__.py  actions_io.py  adjustment_verify.py  checks.py  cli.py  config.py  config_validators.py  console.py  duckdb_ops.py  exit_codes.py  export_io.py  factor_sql.py  help_summary.py  io_utils.py  lock.py  logging_config.py  parquet_io.py  path_guard.py  paths.py  pipeline.py  platform_paths.py  progress.py  query.py  strategy.py  sync.py  tdx_day.py
src/tdx_stocks/alerts/: __init__.py  engine.py
src/tdx_stocks/backtest/: __init__.py  config_parser.py  engine.py  engine.py.bak.v14.20260521152055  engine.py.bak.v14.20260521152113  exits.py  metrics.py  models.py  monte_carlo.py  prices.py  research.py  risk.py  runner.py  sizing.py  validation.py
src/tdx_stocks/commands/: audit.py  common.py  config.py  daily.py  data.py  doctor.py  (+13 more)
tests/: conftest.py  test_adjustment_verify.py  test_backtest_batch.py  test_backtest_engine_research.py  test_cli_help_summary.py  test_cli_surface.py  test_config_validators.py  test_duckdb_ops.py  test_factors.py  test_lock.py  test_pipeline.py  test_platform_paths.py  test_plugins.py  test_portfolio.py  test_query.py  test_query_cli.py  test_release_and_daily.py  test_report_opening.py  test_runner.py  test_runner_sync.py  test_scoring_unit.py  test_signals_unit.py  test_strategy.py  test_strategy_metadata.py  test_tdx_day.py  test_web_app.py
tests/backtest/: test_dynamic_exit_engine.py  test_exit_reason.py
tests/cli/: test_help_command.py  test_main_dispatch.py  test_output_helpers.py  test_query_command.py  test_release_cli_contract.py  test_report_cli_opening.py  test_report_renderers.py  test_report_status_init.py  test_run_command.py  test_run_report_opening.py  test_run_result_rendering.py  test_surface.py  test_sync_command.py
tests/config/: test_bundle_loader.py  test_config_validators.py
tests/grid/: test_dotted_key_override.py
tests/rebalance/: test_pause_open_hold_cash.py  test_reject_unfiltered_target.py
tests/reports/: test_daily_sections.py
tests/risk/: test_macro_filter.py
tools/: generate_cli_help_summary.py
web/: app.py  data_loader.py
(+90 files in other folders)
