[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "tdx-stocks"
version = "0.1.0"
description = "Local TDX day-file pipeline backed by Parquet and DuckDB."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1",
  "pyarrow>=16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.7",
]

[project.scripts]
tdx-stocks = "tdx_stocks.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
