[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "tdx-stocks"
version = "0.6.0"
description = "Local TDX day-file pipeline backed by Parquet and DuckDB."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1",
  "pyarrow>=16",
  "rich>=13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.7",
]
web = [
  "streamlit>=1.36",
  "plotly>=5.22",
  "pandas>=2.2",
]

[project.scripts]
tdx-stocks = "tdx_stocks.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "I001", "UP037", "UP035", "B007", "B009", "F401", "F811", "E402"]

[tool.hatch.build.targets.wheel]
packages = ["src/tdx_stocks"]

[tool.hatch.build.targets.sdist]
include = [
  "src/tdx_stocks",
  "tests",
  "tools",
  "docs",
  "config",
  "README.md",
  "pyproject.toml",
]
