[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "tdx-stocks"
version = "0.6.0"
description = "Local TDX day-file pipeline backed by Parquet and DuckDB."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1",
  "pyarrow>=16",
  "rich>=13",
]

[project.optional-dependencies]
dev = [
  "coverage>=7",
  "mypy>=1.10",
  "pytest>=8",
  "ruff>=0.7",
]
web = [
  "streamlit>=1.36",
  "plotly>=5.22",
  "pandas>=2.2",
]

[project.scripts]
tdx-stocks = "tdx_stocks.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
  "integration: CLI, workflow, and end-to-end smoke tests",
  "requires_pyarrow: tests that need pyarrow-backed parquet helpers",
]

[tool.coverage.run]
branch = true
source = ["tdx_stocks"]
omit = [
  "tests/*",
  "src/tdx_stocks/web/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.mypy]
python_version = "3.11"
files = ["src/tdx_stocks"]
check_untyped_defs = true
ignore_missing_imports = true
pretty = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "I001", "UP037", "UP035", "B007", "B009", "F401", "F811", "E402"]

[tool.hatch.build.targets.wheel]
packages = ["src/tdx_stocks"]

[tool.hatch.build.targets.sdist]
include = [
  "src/tdx_stocks",
  "tests",
  "tools",
  "docs",
  "config",
  "README.md",
  "pyproject.toml",
]
